# zziplib-debian

./: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  zziplib.spec
SDL/: Makefile.in  SDL_rwops_zzip.pc  zzip-sdl-rwops.pc
bins/: Makefile.am  Makefile.in  zziptest.c
debian/: changelog  control  copyright  libzzip-0-13.symbols  libzzip-dev.dirs  libzzip-dev.install  libzzip-dev.manpages  man3.patch  rules  watch  zzip-config.1  zziplib-bin.1  zziplib-bin.install
debian/patches/: 01-fetch.patch  01-zip.c.patch  Avoid-memory-leak-from-__zzip_parse_root_directory-1.patch  Avoid-memory-leak-from-__zzip_parse_root_directory-2.patch  One-more-free-to-avoid-memory-leak.patch  Reject-the-ZIP-file-and-report-it-as-corrupt-if-the-.patch  check-rootseek-after-correction-41.patch  check-rootseek-and-rootsize-to-be-positive-27.patch  check-zlib-space-to-be-within-buffer-39.patch  export-dynamic.patch  fix-for-zz_rootsize-41.patch  merge-CVE-2018-6381.patch-from-jmoellers-12.patch  need-to-check-on-endbuf-for-stored-files-15.patch  python2.diff  series  skip-test.patch  zziplib-CVE-2017-5974.patch  zziplib-CVE-2017-5975.patch  zziplib-CVE-2017-5976.patch  zziplib-CVE-2017-5978.patch  zziplib-CVE-2017-5981.patch  zziplib-unzipcat-NULL-name.patch
docs/: Makefile.am  Makefile.in  body.htm  htmpages.ar  manpages.ar  zzip-file.htm  zzip-xor.htm  zzipfseeko.html  zziplib-manpages.tar  zziplib.html  zzipmmapped.html
test/: Makefile.in
zzip/: Makefile.am  Makefile.in  _msvc.sed  dir.c  err.c  file.c  write.c  zip.c  zzip.h  zziplib.pc
zziplib/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  zzip-config.h  zzip-err.c  zzip-zip.c  zziplib.h  zziplib.spec
zzipwrap/: Makefile.in  zzipwrap.pc
